Update 3-11. DFINITY 基金会.md

--- a/docs/3-11. DFINITY 基金会.md
+++ b/docs/3-11. DFINITY 基金会.md
@@ -3,7 +3,7 @@
  DFINITY是DFINITY Foundation（ DFINITY基金会）的简称，更准确地说是“DFINITY Stiftung”。DFINITY基金会是一家非营利性组织，2016年10月在瑞士楚格成立，总部位于苏黎世。
 
  ## 使命 
-DFINITY为互联网计算机区块链贡献技术，为其生态圈提供支持，并倡导其作为一个技术栈的应用。DFINITY持有目前价值数十亿美元的[ICP代币](https://wiki.internetcomputer.org/wiki/ICP_token)资助，在需要时会出售这些代币来资助其运营。尽管DFINITY没有股东(shareholders)或成员（member），但DFINITY有一个使命:促进互联网计算机的发展和应用。 
+DFINITY为互联网计算机区块链贡献技术，为其生态圈提供支持，并倡导其作为一个技术栈的应用。DFINITY持有目前价值数十亿美元的[ICP代币](https://github.com/icpleague/icp-wiki/blob/master/docs/3-11%EF%BC%881%EF%BC%89%20ICP%20Token.md)资助，在需要时会出售这些代币来资助其运营。尽管DFINITY没有股东(shareholders)或成员（member），但DFINITY有一个使命:促进互联网计算机的发展和应用。 
 
 DFINITY宣称的目标是创造一个区块链奇点，在这个奇点上，随着时间的推移，人类的大部分系统和服务都被重新设想和重建在互联网计算机区块链上，使用被称为“容器”的新形式的智能合约。DFINITY坚持其公证书上所规定的使命，依据瑞士中部BVG和基金会监管局(ZBSA)所运营的监管框架。
 
