--- a/docs/3-10-1. 互联网计算机的性能.md
+++ b/docs/3-10-1. 互联网计算机的性能.md
@@ -17,7 +17,7 @@
 
 我们在这里测量的更新调用是由IC外部发送的入口消息触发的。 
 
-![Update Calls per second](https://wiki.internetcomputer.org/wiki/File:Update_calls_per_second.png)
+![Update Calls per second](https://wiki.internetcomputer.org/wiki/File:Query_calls_per_second.png)
 
 ### 查询调用
 更重要的是查询调用，因为它们贡献了我们在IC上观察到的90%以上的流量。  
