--- a/docs/wiki/3-10-1. 互联网计算机的性能.md
+++ b/docs/wiki/3-10-1. 互联网计算机的性能.md
@@ -1,5 +1,5 @@
 # 互联网计算机的性能
-这篇文章主要介绍DFINITY基金会对互联网计算机的性能评估。目前的测量（measurements)开始于2021年11月。  
+这篇文章主要介绍DFINITY基金会对互联网计算机的性能评估。目前的测量开始于2021年11月。  
 
 互联网计算机的延展性来自于将IC切分成子网区块链。每个子网区块链都可以独立于其他子网处理来自入口消息的调用（写入）。IC可以通过增加更多的子网来扩大规模，但代价是增加更多网络流量（因为应用程序可能需要跨子网进行通信）。在目前的形式下，IC应该能够扩展到数百个子网。  
 
@@ -11,7 +11,7 @@
 
 该实验包括在每个子网中安装一个计数容器。这个计数容器本质上是一个无操作容器（no-op canister)。它只维护一个计数器，可以通过查询调用来被查询并通过更新调用来增量。计数器的值不使用正交持久性，因此IC的执行层的开销（overhead)是最小的。强调计数容器可以看作是确定系统开销或基线性能的一种方式。
 
-## 测量（measurements) 
+## 测量
 ### 更新调用
 互联网计算机目前每秒可以持续更新11000次以上，持续时间为4分钟，最高可以超过11500次更新/秒。
 
