--- a/docs/wiki/3-16(2) 质押选项.md
+++ b/docs/wiki/3-16(2) 质押选项.md
@@ -4,7 +4,7 @@
 ## 第三方解决方案
 目前没有第三方质押解决方案。
 
-## 自我托管
+## 自助托管
 ### NNS Frontend dapp
 如果您使用NNS frontend dapp进行托管，请参阅：[使用NNS frontend dapp进行ICP质押](https://wiki.internetcomputer.org/wiki/ICP_staking_with_NNS_frontend_dapp)。
 
