--- a/docs/wiki/3-15 FAQ.md
+++ b/docs/wiki/3-15 FAQ.md
@@ -10,8 +10,8 @@
 * 环保  
 
 查看更多：
-* [互联网计算机概述](https://wiki.internetcomputer.org/wiki/Internet_Computer_overview)
-* [互联网计算机愿景](https://wiki.internetcomputer.org/wiki/Internet_Computer_vision)   
+* [互联网计算机概述](https://github.com/icpleague/icp-wiki/blob/master/docs/wiki/%E4%BA%92%E8%81%94%E7%BD%91%E8%AE%A1%E7%AE%97%E6%9C%BA%E6%A6%82%E8%BF%B0.md)
+* [互联网计算机愿景](https://github.com/icpleague/icp-wiki/blob/master/docs/wiki/%E4%BA%92%E8%81%94%E7%BD%91%E8%AE%A1%E7%AE%97%E6%9C%BA%E6%84%BF%E6%99%AF.md)   
 
 ### 1.2 什么类型的dapp可以在IC上运行?
  IC可以运行非常复杂的智能合约和dapp。最引入注目的是，IC上的智能合约和dapp与其他区块链的区别在于:
