--- a/docs/wiki/什么是互联网身份.md
+++ b/docs/wiki/什么是互联网身份.md
@@ -2,7 +2,7 @@
 
 为了访问互联网计算机上运行的应用程序并与之交互，用户通常需要进行身份验证。在互联网计算机上进行身份验证的最常用方法之一是通过互联网身份验证。
 
-互联网身份（II）（https://identity.ic0.app/）是互联网计算机支持的区块链验证框架。用户通过创建身份“锚”开始该过程，他们为其分配兼容的加密启用设备，例如笔记本电脑上的指纹传感器、手机上的面部识别系统或便携式 HSM，例如 YubiKey 或 Ledger 钱包。此后，他们可以使用分配给其锚点的任何设备注册并验证在互联网计算机上运行的 Dapp。这提供了高度的便利性，允许用户以非常低的阻力对 Dapp 进行身份验证，同时还受益于高级别的安全性，并且无需自己直接管理或处理加密密钥材料。该系统为用户提供了一定程度的隐私，通过确保每当锚点用于与 Dapp 交互时，Dapp 会看到为该 Dapp 专门生成的假名，从而防止 Dapp 在他们使用的各种 Dapp 中跟踪用户。用户可以根据需要创建任意数量的身份锚。
+互联网身份（II）（https://identity.ic0.app/ ）是互联网计算机支持的区块链验证框架。用户通过创建身份“锚”开始该过程，他们为其分配兼容的加密启用设备，例如笔记本电脑上的指纹传感器、手机上的面部识别系统或便携式 HSM，例如 YubiKey 或 Ledger 钱包。此后，他们可以使用分配给其锚点的任何设备注册并验证在互联网计算机上运行的 Dapp。这提供了高度的便利性，允许用户以非常低的阻力对 Dapp 进行身份验证，同时还受益于高级别的安全性，并且无需自己直接管理或处理加密密钥材料。该系统为用户提供了一定程度的隐私，通过确保每当锚点用于与 Dapp 交互时，Dapp 会看到为该 Dapp 专门生成的假名，从而防止 Dapp 在他们使用的各种 Dapp 中跟踪用户。用户可以根据需要创建任意数量的身份锚。
 
 与大多数身份验证方法不同，用户无需设置和管理密码或向 Dapp 或互联网身份事提供任何个人识别信息。
 
@@ -19,5 +19,5 @@
 
 另见：
 
-- [Dapp 用户的互联网身份](https://wiki.internetcomputer.org/wiki/Internet_Identity_for_dapp_users)，了解如何设置互联网身份。
-- [互联网身份技术概览](https://wiki.internetcomputer.org/wiki/Internet_Identity_technical_overview) 了解创建互联网身份时发生的一些技术细节。
+- [Dapp 用户的互联网身份](Dapp 用户的互联网身份.md)，了解如何设置互联网身份。
+- [互联网身份技术概览](互联网身份技术概览.md) 了解创建互联网身份时发生的一些技术细节。
