--- a/docs/wiki/互联网计算机的性能.md
+++ b/docs/wiki/互联网计算机的性能.md
@@ -9,7 +9,7 @@
 ## 测试设置
 实验是对所有子网同时进行的，只有NNS和一些最常用的应用程序子网除外，这是为了避免对现有IC用户的干扰。IC 有一组边界节点，可以将调用路由到存储子网的核心节点。实验将负载（loads）直接发到子网上，并没有通过边界节点路由流量。边界节点有额外的速率限制，相比于IC 可以处理的速率，边界节点目前设置的速率稍微保守一些，因此在边界节点上运行将不适合进行性能评估。实验同时针对每个子网中的所有节点，这和边界节点所做的事情非常相似，如果我们用边界节点的话。
 
-该实验包括在每个子网中安装一个计数容器。这个计数容器本质上是一个无操作容器（no-op canister)。它只维护一个计数器，可以通过查询调用来被查询并通过更新调用来增量。计数器的值不使用正交持久性，因此IC的执行层的开销（overhead)是最小的。强调计数容器可以看作是确定系统开销或基线性能的一种方式。
+该实验包括在每个子网中安装一个计数容器。这个计数容器本质上是一个无操作容器。它只维护一个计数器，可以通过查询调用来被查询并通过更新调用来增量。计数器的值不使用正交持久性，因此IC的执行层的开销（overhead)是最小的。强调计数容器可以看作是确定系统开销或基线性能的一种方式。
 
 ## 测量
 ### 更新调用
@@ -17,20 +17,20 @@
 
 我们在这里测量的更新调用是由IC外部发送的入口消息触发的。 
 
-![Update Calls per second](https://wiki.internetcomputer.org/wiki/File:Update_calls_per_second.png)
+![Update Calls per second](https://github.com/icpleague/icp-wiki/blob/44c51b89d674f8e5fad25ec069d55a090e748200/docs/wiki/performance%201.png)
 
 ### 查询调用
 更重要的是查询调用，因为它们贡献了我们在IC上观察到的90%以上的流量。  
 
 
-![Query Calls per second](https://wiki.internetcomputer.org/wiki/File:Query_calls_per_second.png)
+![Query Calls per second](https://github.com/icpleague/icp-wiki/blob/44c51b89d674f8e5fad25ec069d55a090e748200/docs/wiki/Performance%202.png)
 
 互联网计算机目前每秒最多可以处理250,000个查询。在实验过程中，每个负载(load)都会逐渐增加并运行5分钟。 
 
 ## 结论和后续步骤
-互联网计算机现在的性能表现令人印象深刻。在此之上，应该可以进一步扩展IC的使用：
+互联网计算机现在的性能表现令人印象深刻。在此之上，可以进一步扩展IC的使用：
 
-* 更多子网：这将立即增加查询和更新调用通量。虽然添加子网最终可能会导致其他可扩展性的问题，但当前情况下IC应该能够支持数百个子网。
+* 更多子网：这将立即增加查询和更新调用通量。虽然添加子网最终可能会导致其他扩展性的问题，但目前IC应该能支持数百个子网。
 
 * 性能提升：提高性能还可以通过更好的单机、网络和共识性能调优来实现。将性能提高至少一个数量级是有可能的。
 
