--- a/docs/wiki/投票选项.md
+++ b/docs/wiki/投票选项.md
@@ -18,6 +18,6 @@
 一个神经元可以跟随任何神经元。请参阅[为神经元选择跟随者](https://wiki.internetcomputer.org/wiki/Editing_following_for_neurons)。
 
 ## 另请参阅：
-* [管理持有的ICP](https://wiki.internetcomputer.org/wiki/Managing_ICP_holdings)
-* [ICP托管选项](https://wiki.internetcomputer.org/wiki/ICP_custody_options)
+* [管理持有的ICP](管理持有的ICP.md)
+* [ICP托管选项](托管选项.md)
 * [用NNS frontend dapp进行ICP质押](https://wiki.internetcomputer.org/wiki/ICP_staking_with_NNS_frontend_dapp)
