--- a/docs/wiki/什么是互联网身份.md
+++ b/docs/wiki/什么是互联网身份.md
@@ -20,4 +20,4 @@
 另见：
 
 - [Dapp 用户的互联网身份](Dapp用户的互联网身份.md)，了解如何设置互联网身份。
-- [互联网身份技术概览](互联网身份技术概览.md) 了解创建互联网身份时发生的一些技术细节。
+- [互联网身份技术概述](互联网身份技术概述.md) 了解创建互联网身份时发生的一些技术细节。
