--- a/docs/wiki/互联网计算机的性能.md
+++ b/docs/wiki/互联网计算机的性能.md
@@ -17,13 +17,13 @@
 
 我们在这里测量的更新调用是由IC外部发送的入口消息触发的。 
 
-![Update Calls per second](https://github.com/icpleague/icp-wiki/blob/44c51b89d674f8e5fad25ec069d55a090e748200/docs/wiki/performance%201.png)
+![Update Calls per second](https://user-images.githubusercontent.com/64115203/158593150-25593d09-4855-4206-b5cd-10de30e95751.png)
 
 ### 查询调用
 更重要的是查询调用，因为它们贡献了我们在IC上观察到的90%以上的流量。  
 
+![Query Calls per second](https://user-images.githubusercontent.com/64115203/158593248-5a77d120-6935-4e56-b815-223558bcac45.png)
 
-![Query Calls per second](https://github.com/icpleague/icp-wiki/blob/44c51b89d674f8e5fad25ec069d55a090e748200/docs/wiki/Performance%202.png)
 
 互联网计算机目前每秒最多可以处理250,000个查询。在实验过程中，每个负载(load)都会逐渐增加并运行5分钟。 
 
