--- a/docs/wiki/操作方法：为种子参与者申领神经元.md
+++ b/docs/wiki/操作方法：为种子参与者申领神经元.md
@@ -35,7 +35,7 @@
 
 申领需要获取你的秘密助记词以及由它延伸的密钥。强烈建议你使用气隙计算机进行申领。如果你不习惯这样的设置或以下任何步骤，那么你必须等待下一个版本的Ledger Nano设备的“ICP”应用程序。
 
-你可以使用Windows、Linux或MacOS机器来作为气隙计算机。Linux包括树莓派。
+你可以使用Windows、Linux或MacOS来作为气隙计算机。Linux包括树莓派。
 
 ### 下载工具
 你需要第二台联网的计算机来下载工具。这些工具被称为 *keysmith* 和 *quill*。这里描述了如何为你的架构查找和下载二进制文件。或者，您可以从 github 上为 [keysmith](https://github.com/dfinity/keysmith)和 [quill](https://github.com/dfinity/quill) 提供的源代码来自己编译工具。
@@ -55,7 +55,7 @@
 去 [keysmith](https://github.com/dfinity/keysmith/releases/) 选择最新版本（目前是 v1.6.2），并获取与上表中的气隙计算机架构匹配的<kbd>.tar.gz</kbd> 文件。
 
 ### 下载quill
-去 [quill](https://github.com/dfinity/quill/releases) 选择最新版本（必须 >= 0.2.12）,并获取与上表中气隙机器架构匹配的可执行文件。
+去 [quill](https://github.com/dfinity/quill/releases) 选择最新版本（必须 >= 0.2.12）,并获取与上表中气隙计算机架构匹配的可执行文件。
 
 ### 拷贝到到气隙计算机
 从联网计算机中将 keysmith<kbd>.tar.gz</kbd>文件和 quill 可执行文件复制到气隙计算机。例如，你可以用一个USB驱动器执行这个操作。
