--- a/docs/wiki/操作方法：为种子参与者申领神经元.md
+++ b/docs/wiki/操作方法：为种子参与者申领神经元.md
@@ -62,7 +62,7 @@
 
 ### 验证哈希
 
-打开气隙机，转到终端。将目录更改为keysmith .tar.gz文件和quill可执行文件所在的文件夹。使用命令计算SHA256哈希值
+打开气隙机，转到终端。将目录更改为keysmith .tar.gz文件和quill可执行文件所在的文件夹。使用以下命令计算SHA256哈希：
 
     openssl dgst -sha256 keysmith-*
 
