--- a/docs/wiki/操作方法：为种子参与者申领神经元.md
+++ b/docs/wiki/操作方法：为种子参与者申领神经元.md
@@ -42,10 +42,10 @@
 
 二进制文件可用于以下硬件架构。在这里，架构是指气隙计算机，而不是联网计算机。
 
-| 硬件 |	钥匙匠	| 鹅毛笔 |
+| 硬件 |	keysmith	| quill |
 | --- | --- | --- |
-|Mac、英特尔芯片 |	达尔文-amd64 | macos-x86_64 |
-| Mac、苹果芯片 (M1) |	达尔文-arm64	| - |
+|Mac、英特尔芯片 |	darwin-amd64 | macos-x86_64 |
+| Mac、苹果芯片 (M1) |	darwin-arm64	| - |
 | Linux (x86)	| linux-amd64	|linux-x86_64 |
 | 树莓派	| linux-arm32	| arm_32 |
 | Linux（arm）	| linux-arm64 |	- |
