--- a/docs/wiki/互联网计算机介绍/互联网计算机概述.md
+++ b/docs/wiki/互联网计算机介绍/互联网计算机概述.md
@@ -32,7 +32,7 @@
 
 有关容器的更多信息，请访问：
 
-- [The canister wiki page](https://wiki.internetcomputer.org/wiki/Canisters_(dapps/smart_contracts)). 
+- [容器（dapps智能合约）](../智能合约和 Dapp 开发人员的互联网计算机/容器（dapps智能合约）.md)
 - This [Medium post](https://medium.com/dfinity/software-canisters-an-evolution-of-smart-contracts-internet-computer-f1f92f1bfffb) about canisters.
 - The [developer documentation](https://smartcontracts.org/docs/developers-guide/concepts/canisters-code.html) for canisters.
 
