--- a/docs/wiki/常见问题解答、教程和操作方法/操作方法：为种子参与者申领神经元.md
+++ b/docs/wiki/常见问题解答、教程和操作方法/操作方法：为种子参与者申领神经元.md
@@ -5,11 +5,11 @@
 ## 介绍
 如果你在2017年2月向DFINITY基金会捐款来支持互联网计算机的发展，那么你就是种子参与者。当时每捐赠同价值的瑞士法郎会分配30个代币到你的密钥上。这些代币现在被称为“ICP实用型代币”或简称“ICP”。
 
-在创世解锁时(Genesis Unlock)，ICP以49个投票[神经元](https://wiki.internetcomputer.org/wiki/Network_Nervous_System)为一篮子的形式支付给你。这些神经元已经存在于[网络神经系统](https://wiki.internetcomputer.org/wiki/Network_Nervous_System)中。你的神经元包含了你已经获得的代币，这些代币被质押在内。
+在创世解锁时(Genesis Unlock)，ICP以49个投票[神经元](ICP代币持有者、质押者和神经元持有者的互联网计算机/网络神经系统.md)为一篮子的形式支付给你。这些神经元已经存在于[网络神经系统](ICP代币持有者、质押者和神经元持有者的互联网计算机/网络神经系统.md)中。你的神经元包含了你已经获得的代币，这些代币被质押在内。
 
 你的神经元被配置成了自动投票，并且已经为你赢得了投票奖励。所以你不需要为了继续获得投票奖励而做任何事来初始化你的神经元。
 
-你的49个神经元具有溶解[延迟](https://wiki.internetcomputer.org/wiki/Network_Nervous_System)，可以是0天、30 天、60 天、90天等。除了第一个神经元具有0天溶解延迟（可以立即溶解）外，其他溶解延迟可能会被加上少量随机天数。
+你的49个神经元具有溶解[延迟](/ICP代币持有者、质押者和神经元持有者的互联网计算机/网络神经系统.md)，可以是0天、30 天、60 天、90天等。除了第一个神经元具有0天溶解延迟（可以立即溶解）外，其他溶解延迟可能会被加上少量随机天数。
 
 你的神经元也已经被提前设定了年龄。在创世解锁的那一刻，他们的年龄被设定为了18个月。这很重要，因为神经元年龄极大地增加了你的投票权和所获得的投票奖励。
 
