Update and rename docs/wiki/互联网身份介绍/Dapp用户的互联网身份.md to docs/wiki/2.互联网身份介绍/2.2Dapp用户的互联网身份.md

--- a/docs/wiki/2.互联网身份介绍/2.2Dapp用户的互联网身份.md
+++ b/docs/wiki/2.互联网身份介绍/2.2Dapp用户的互联网身份.md
@@ -1,4 +1,4 @@
-# Dapp 用户的互联网身份
+# 2.2 Dapp 用户的互联网身份
 
 众所周知，用户名和密码一直是个人网络安全的薄弱环节。 为了解决这个问题并为互联网计算机（IC）上的用户提供更高的安全性，互联网身份（II）区块链验证系统被开发出来。 互联网身份使您能够使用您的设备对互联网计算机上的 Dapp 进行身份验证和匿名登录。 任何拥有传统 HSM 设备（例如 YubiKey）或包含 TPM 芯片的移动设备（例如笔记本电脑或手机）的人都可以生成互联网身份并开始在 IC 上使用 Dapp。
 
