Update and rename docs/wiki/面向Dapp用户的互联网计算机/Dapp用户的互联网计算机介绍.md to docs/wiki/3.面向Dapp用户的互联网计算机/3.1Dapp用户的互联网计算机介绍.md

--- a/docs/wiki/3.面向Dapp用户的互联网计算机/3.1Dapp用户的互联网计算机介绍.md
+++ b/docs/wiki/3.面向Dapp用户的互联网计算机/3.1Dapp用户的互联网计算机介绍.md
@@ -1,4 +1,4 @@
-# Dapp 用户的互联网计算机介绍
+# 3.1 Dapp 用户的互联网计算机介绍
 
 作为终端用户，您与运行在互联网计算机上的去中心化应用程序（ Dapp ）进行交互。 这是可供用户使用的[互联网计算机上的 Dapp 索引](互联网计算机上的Dapp索引)。
 
