Update and rename docs/wiki/面向Dapp用户的互联网计算机/互联网计算机上的Dapp索引.md to docs/wiki/3.面向Dapp用户的互联网计算机/3.2互联网计算机上的Dapp索引.md

--- a/docs/wiki/3.面向Dapp用户的互联网计算机/3.2互联网计算机上的Dapp索引.md
+++ b/docs/wiki/3.面向Dapp用户的互联网计算机/3.2互联网计算机上的Dapp索引.md
@@ -1,4 +1,4 @@
-# 互联网计算生态系统上的 Dapp 索引
+# 3.2 互联网计算生态系统上的 Dapp 索引
 
 （重定向自[互联网计算机上的 dapps 索引](https://wiki.internetcomputer.org/w/index.php?title=Index_of_dapps_on_the_Internet_Computer&redirect=no)）
 
