Update and rename docs/wiki/ICP代币持有者、质押者和神经元持有者的互联网计算机/ICP代币.md to docs/wiki/4.ICP代币持有者、质押者和神经元持有者的互联网计算机/4.1ICP代币.md

--- a/docs/wiki/4.ICP代币持有者、质押者和神经元持有者的互联网计算机/4.1ICP代币.md
+++ b/docs/wiki/4.ICP代币持有者、质押者和神经元持有者的互联网计算机/4.1ICP代币.md
@@ -1,4 +1,4 @@
-# ICP代币
+# 4.1 ICP代币
 
 互联网计算机协议 (ICP) 实用代币在 IC 中扮演着多管齐下的角色。ICP 代币持有者可以参与互联网计算机的治理，ICP 代币用于奖励节点提供者，并且（间接）用于支付运行在 IC 上的智能合约所使用的资源。ICP 代币在许多加密交易所[[1\]](https://coinmarketcap.com/currencies/internet-computer/)[[2\]](https://www.coingecko.com/en/coins/internet-computer)上进行交易。
 
