Update and rename docs/wiki/ICP代币持有者、质押者和神经元持有者的互联网计算机/互联网计算机的治理.md to docs/wiki/4.ICP代币持有者、质押者和神经元持有者的互联网计算机/4.4互联网计算机的治理.md

--- a/docs/wiki/4.ICP代币持有者、质押者和神经元持有者的互联网计算机/4.4互联网计算机的治理.md
+++ b/docs/wiki/4.ICP代币持有者、质押者和神经元持有者的互联网计算机/4.4互联网计算机的治理.md
@@ -1,4 +1,4 @@
-# 互联网计算机治理
+# 4.4 互联网计算机治理
 
 互联网计算机区块链由网络神经系统[[1\]](https://wiki.internetcomputer.org/wiki/Governance_of_the_Internet_Computer#cite_note-1)管理。NNS 是一个算法治理系统，负责监督网络和代币经济，使构建 DeFi dapp、开放互联网服务和企业系统成为可能。
 
