Update and rename docs/wiki/ICP代币持有者、质押者和神经元持有者的互联网计算机/托管选项.md to docs/wiki/4.ICP代币持有者、质押者和神经元持有者的互联网计算机4.2.1托管选项.md

--- a/docs/wiki/4.ICP代币持有者、质押者和神经元持有者的互联网计算机4.2.1托管选项.md
+++ b/docs/wiki/4.ICP代币持有者、质押者和神经元持有者的互联网计算机4.2.1托管选项.md
@@ -1,4 +1,4 @@
-# 托管选项
+# 4.2.1 托管选项
 ## 你想要最大限度地控制你的密钥吗?
 ### 如果不想，那就使用第三方托管解决方案  
 第三方托管解决方案允许你与你的ICP交互，并为了控制而让出一些消费者体验。这个让步很简单:如果你不喜欢管理自己的密钥，并且愿意让第三方访问您的钥匙以使整个过程变得更方便，那么第三方解决方案可能是个好选择。  
