Update and rename docs/wiki/为好奇者、研究人员和区块链爱好者准备的互联网计算机/互联网计算机的性能.md to docs/wiki/6.为好奇者、研究人员和区块链爱好者准备的互联网计算机/6.1互联网计算机的性能.md

--- a/docs/wiki/6.为好奇者、研究人员和区块链爱好者准备的互联网计算机/6.1互联网计算机的性能.md
+++ b/docs/wiki/6.为好奇者、研究人员和区块链爱好者准备的互联网计算机/6.1互联网计算机的性能.md
@@ -1,4 +1,4 @@
-# 互联网计算机的性能
+# 6.1 互联网计算机的性能
 这篇文章主要介绍DFINITY基金会对互联网计算机的性能评估。该评估测试起始点时间为2021年11月。  
 
 互联网计算机的拓展性来自于将IC分片为子网区块链。每个子网区块链都可以独立于其他子网处理来自入口消息的调用（写入）。IC可以通过增加更多的子网来扩大规模，以增加更多网络流量（因为应用程序可能需要跨子网进行通信）。在目前的形式下，IC应该能够扩展到数百个子网。  
