Update and rename docs/wiki/为好奇者、研究人员和区块链爱好者准备的互联网计算机/DFINITY 基金会.md to docs/wiki/6.为好奇者、研究人员和区块链爱好者准备的互联网计算机/6.2DFINITY 基金会.md

--- a/docs/wiki/6.为好奇者、研究人员和区块链爱好者准备的互联网计算机/6.2DFINITY 基金会.md
+++ b/docs/wiki/6.为好奇者、研究人员和区块链爱好者准备的互联网计算机/6.2DFINITY 基金会.md
@@ -1,4 +1,4 @@
-# DFINITY基金会 
+# 6.2 DFINITY基金会 
  DFINITY是DFINITY Foundation（ DFINITY基金会）的简称，更准确地说是“DFINITY Stiftung”。DFINITY基金会是一家非营利性组织，2016年10月在瑞士楚格成立，总部位于苏黎世。
 
  ## 使命 
