--- a/docs/wiki/1.互联网计算机介绍/1.2互联网计算机概述.md
+++ b/docs/wiki/1.互联网计算机介绍/1.2互联网计算机概述.md
@@ -32,7 +32,7 @@
 
 有关容器的更多信息，请访问：
 
-- [容器（dapps智能合约）](../智能合约和 Dapp 开发人员的互联网计算机/容器（dapps智能合约）.md)
+- [容器（dapps智能合约）](../5.智能合约和Dapp开发人员的互联网计算机/5.1容器（dapps智能合约）.md)
 - This [Medium post](https://medium.com/dfinity/software-canisters-an-evolution-of-smart-contracts-internet-computer-f1f92f1bfffb) about canisters.
 - The [developer documentation](https://smartcontracts.org/docs/developers-guide/concepts/canisters-code.html) for canisters.
 
@@ -40,7 +40,7 @@
 
 互联网计算机旨在改善与运行在区块链上的智能合约和 Dapp 交互的用户体验。 IC 上的 Dapps 能够提供 Web 内容，允许用户通过浏览器与 Dapps 进行交互。 Dapps 本身由 IC 上的容器（Dapps/智能合约）运行，具有它提供的稳健性和安全性保证。 开发人员使用 Rust 或 Motoko 等编程语言创建 Dapp，将它们编译为 WebAssembly 字节码，并将 WebAssembly 模块部署到互联网计算机上的容器中。 一个容器包括一个 WebAssembly 模块和持久内存。 如需更多信息或开始在 IC 上使用 Dapp，请参阅：
 
-- [Index of dapps on the IC](https://wiki.internetcomputer.org/wiki/Index_of_dapps_on_the_Internet_Computer_ecosystem)
+- [互联网计算机上的 Dapp 索引](../3.面向Dapp用户的互联网计算机/3.2互联网计算机上的Dapp索引.md)
 - This [Medium post](https://medium.com/dfinity/internet-computer-pioneers-early-adopters-describe-launching-dapps-on-the-blockchain-e979281f19b8) where early adopters describe their experience of launching dapps on the IC.
 
 ## 互联网身份
@@ -51,9 +51,9 @@
 
 要阅读有关 Internet 身份的更多信息或生成锚点，请参阅：
 
-- The [Internet Identity dapp](https://identity.ic0.app/).
-- [Internet Identity for dapp users](https://wiki.internetcomputer.org/wiki/Internet_Identity_for_dapp_users).
-- [Internet Identity technical overview](https://wiki.internetcomputer.org/wiki/Internet_Identity_technical_overview).
+- The [互联网身份 Dapp](https://identity.ic0.app/).
+- [Dapp 用户的互联网身份](../2.互联网身份介绍/2.2Dapp用户的互联网身份.md).
+- [互联网身份技术概述](../2.互联网身份介绍/2.3互联网身份技术概述.md).
 - The Internet Identity [developer documentation](https://smartcontracts.org/docs/ic-identity-guide/what-is-ic-identity.html).
 
 ## 网络神经系统（NNS）
