--- a/docs/wiki/7.常见问题解答、教程和操作方法/7.2管理互联网身份.md
+++ b/docs/wiki/7.常见问题解答、教程和操作方法/7.2管理互联网身份.md
@@ -1,10 +1,10 @@
 # 7.2 管理互联网身份
 互联网身份使用者应遵循以下建议:
-## 阅读条文2
+## 阅读条文II
 你可以学习
 [Dapp用户的互联网身份](Dapp用户的互联网身份.md)中的基础知识II。
-## 添加恢复机制
-最常见的恢复机制是种子短语，但也推荐使用安全密钥。
+## 增加恢复机制
+最常见的恢复机制是助记词，但也推荐使用安全密钥。
 ## 添加多个设备
-设备可能会出现故障，建议用户添加多台设备以实现冗余(redundancy)。
+设备可能会出现故障，建议用户添加多台设备以做备用。
 
