--- a/docs/wiki/1.互联网计算机介绍/1.2互联网计算机概述.md
+++ b/docs/wiki/1.互联网计算机介绍/1.2互联网计算机概述.md
@@ -28,26 +28,26 @@
 
 ## 容器（dapps/智能合约）
 
-互联网计算机托管强大的智能合约，称为容器。 容器是防篡改的、自主的、托管在链上的，并且可以同时运行并相互交互。 容器可以为最终用户创建的 HTTP 请求提供服务，这使他们能够直接提供交互式 Web 体验。 这意味着无需将在企业云托管服务和私有服务器上运行的网站整合到其架构中即可创建区块链 dapp、系统和服务，从而提供真正的端到端 Web 3.0 去中心化、抗审查（censorship resistance）和卓越的安全性。
+互联网计算机托管强大的智能合约，称为容器。 容器是防篡改的、自主的、托管在链上的，并且可以同时运行并相互交互。 容器可以为最终用户创建的 HTTP 请求提供服务，这使他们能够直接提供交互式 Web 体验。 这意味着无需将在企业云托管服务和私有服务器上运行的网站整合到其架构中即可创建区块链 Dapp、系统和服务，从而提供真正的端到端 Web 3.0 去中心化、抗审查（censorship resistance）和卓越的安全性。
 
 有关容器的更多信息，请访问：
 
 - [容器（dapps智能合约）](../5.智能合约和Dapp开发人员的互联网计算机/5.1容器（dapps智能合约）.md)
-- This [Medium post](https://medium.com/dfinity/software-canisters-an-evolution-of-smart-contracts-internet-computer-f1f92f1bfffb) about canisters.
-- The [developer documentation](https://smartcontracts.org/docs/developers-guide/concepts/canisters-code.html) for canisters.
+- 关于容器的[Medium](https://medium.com/dfinity/software-canisters-an-evolution-of-smart-contracts-internet-computer-f1f92f1bfffb)帖子
+- 容器的[开发者文档](https://smartcontracts.org/docs/developers-guide/concepts/canisters-code.html)
 
 ## Dapps
 
 互联网计算机旨在改善与运行在区块链上的智能合约和 Dapp 交互的用户体验。 IC 上的 Dapps 能够提供 Web 内容，允许用户通过浏览器与 Dapps 进行交互。 Dapps 本身由 IC 上的容器（Dapps/智能合约）运行，具有它提供的稳健性和安全性保证。 开发人员使用 Rust 或 Motoko 等编程语言创建 Dapp，将它们编译为 WebAssembly 字节码，并将 WebAssembly 模块部署到互联网计算机上的容器中。 一个容器包括一个 WebAssembly 模块和持久内存。 如需更多信息或开始在 IC 上使用 Dapp，请参阅：
 
 - [互联网计算机上的 Dapp 索引](../3.面向Dapp用户的互联网计算机/3.2互联网计算机上的Dapp索引.md)
-- This [Medium post](https://medium.com/dfinity/internet-computer-pioneers-early-adopters-describe-launching-dapps-on-the-blockchain-e979281f19b8) where early adopters describe their experience of launching dapps on the IC.
+- 在这篇[Medium](https://medium.com/dfinity/internet-computer-pioneers-early-adopters-describe-launching-dapps-on-the-blockchain-e979281f19b8)帖子中，早期使用者描述了他们在 IC 上启动 Dapp 的经历。
 
 ## 互联网身份
 
-互联网身份是互联网计算机支持的匿名区块链认证框架。用户可以创建身份“锚”，并为其分配兼容的加密设备，例如笔记本电脑上的指纹传感器、手机上的面部识别系统或便携式 HSM，例如 YubiKey 或 Ledger 钱包。此后，他们可以使用他们分配给他们的锚点的任何设备注册并验证在互联网计算机上运行的任何 dapp。这提供了高度的便利性，允许用户以非常低的阻力对他们感兴趣的 dapp 进行身份验证，同时受益于最高级别的加密安全性，而无需自己直接管理或处理加密密钥材料，这可以防止错误和关键材料被盗。该系统对 dapp 进行匿名处理，每当使用锚点与 dapp 交互时，dapp 都会看到一个专门生成的假名，从而防止用户在他们使用的各种 dapp 中被跟踪。用户可以根据需要创建任意数量的身份锚。
+互联网身份是互联网计算机支持的匿名区块链认证框架。用户可以创建身份“锚”，并为其分配兼容的加密设备，例如笔记本电脑上的指纹传感器、手机上的面部识别系统或便携式 HSM，例如 YubiKey 或 Ledger 钱包。此后，他们可以使用他们分配给他们的锚点的任何设备注册并验证在互联网计算机上运行的任何 dapp。这提供了高度的便利性，允许用户以非常低的阻力对他们感兴趣的 Dapp 进行身份验证，同时受益于最高级别的加密安全性，而无需自己直接管理或处理加密密钥材料，这可以防止错误和关键材料被盗。该系统对 dapp 进行匿名处理，每当使用锚点与 dapp 交互时，Dapp 都会看到一个专门生成的假名，从而防止用户在他们使用的各种 Dapp 中被跟踪。用户可以根据需要创建任意数量的身份锚。
 
-与大多数身份验证方法不同，互联网身份不需要用户设置和管理密码或向dapp或互联网身份提供任何个人识别信息。
+与大多数身份验证方法不同，互联网身份不需要用户设置和管理密码或向 Dapp 或互联网身份提供任何个人识别信息。
 
 要阅读有关 Internet 身份的更多信息或生成锚点，请参阅：
 
