--- a/docs/wiki/1.互联网计算机介绍/1.2互联网计算机概述.md
+++ b/docs/wiki/1.互联网计算机介绍/1.2互联网计算机概述.md
@@ -54,7 +54,7 @@
 - [互联网身份 Dapp](https://identity.ic0.app/).
 - [Dapp 用户的互联网身份](../2.互联网身份介绍/2.2Dapp用户的互联网身份.md).
 - [互联网身份技术概述](../2.互联网身份介绍/2.3互联网身份技术概述.md).
-- The Internet Identity [developer documentation](https://smartcontracts.org/docs/ic-identity-guide/what-is-ic-identity.html).
+- 互联网身份[开发者文档](https://smartcontracts.org/docs/ic-identity-guide/what-is-ic-identity.html).
 
 ## 网络神经系统（NNS）
 
