--- a/docs/wiki/1.互联网计算机介绍/1.3互联网计算机愿景.md
+++ b/docs/wiki/1.互联网计算机介绍/1.3互联网计算机愿景.md
@@ -8,7 +8,7 @@
 
 智能合约快速且高效，允许开发人员构建任何东西。 设计目标是开发人员可以构建面向消费者的体验，其速度与集中式服务器一样快。 Dapp 开发者不需要在“智能合约”和“快速”之间做出选择。 简而言之，Dapp 用户体验快到用户不会注意到他们的 Web 体验是在区块链上运行还是在集中式提供商上运行。
 
-从区块链 POV 来看，[互联网计算机性能](https://wiki.internetcomputer.org/wiki/Internet_Computer_Performance)性能测试显示查询调用（读取）的 IC 延迟为 200 毫秒，更新调用（写入）为 2 秒。 截至 2021 年 12 月 1 日，互联网计算机每秒可以处理 250,000 个查询和 11,500 个更新调用。
+从区块链 POV 来看，[互联网计算机性能](../6.为好奇者、研究人员和区块链爱好者准备的互联网计算机/6.1互联网计算机的性能.md)性能测试显示查询调用（读取）的 IC 延迟为 200 毫秒，更新调用（写入）为 2 秒。 截至 2021 年 12 月 1 日，互联网计算机每秒可以处理 250,000 个查询和 11,500 个更新调用。
 
 ### 环境和成本
 
@@ -17,10 +17,10 @@
 
 对比如下:
 
-|    Blockchain     |        存储成本         |
+|    区块链     |        存储成本         |
 | :---------------: | :---------------------: |
-|     Ethereum      | $350,000,000 美元/GB/年 |
-| Internet Computer |      $5 美元/GB/年      |
+|     以太坊      | $350,000,000 美元/GB/年 |
+| 互联网计算机 |      $5 美元/GB/年      |
 
 #### 间接成本低
 数据复制附带的“默认安全”智能合约消除了开发人员不需要构建的许多软件复杂性。 IC 的设计意图是简化开发和部署，与传统系统相比，减少构建和维护软件所需的时间。
