--- a/docs/wiki/2.互联网身份介绍/2.1什么是互联网身份.md
+++ b/docs/wiki/2.互联网身份介绍/2.1什么是互联网身份.md
@@ -19,6 +19,6 @@
 
 另见：
 
-- [Dapp 用户的互联网身份](Dapp用户的互联网身份.md)，了解如何设置互联网身份。
-- [互联网身份技术概述](互联网身份技术概述.md) 了解创建互联网身份时发生的一些技术细节。
+- [Dapp 用户的互联网身份](2.2Dapp用户的互联网身份.md)，了解如何设置互联网身份。
+- [互联网身份技术概述](2.3互联网身份技术概述.md) 了解创建互联网身份时发生的一些技术细节。
 
