--- a/docs/wiki/2.互联网身份介绍/2.3互联网身份技术概述.md
+++ b/docs/wiki/2.互联网身份介绍/2.3互联网身份技术概述.md
@@ -83,8 +83,8 @@ SHA256(|salt| · salt · |anchor| · anchor · |rel_canister_id| · rel_canister
 
 ## 另请参阅
 
-- [什么是互联网身份](什么是互联网身份.md)快速了解什么是互联网身份。
-- [Dapp 用户的互联网身份](Dapp用户的互联网身份.md)，以了解设置锚点和使用互联网身份的演练。
+- [什么是互联网身份](2.1什么是互联网身份.md)快速了解什么是互联网身份。
+- [Dapp 用户的互联网身份](2.2Dapp用户的互联网身份.md)，以了解设置锚点和使用互联网身份的演练。
 - [什么是互联网身份](https://smartcontracts.org/docs/ic-identity-guide/what-is-ic-identity.html)
 - [互联网身份：用户名和密码的终结](https://medium.com/dfinity/internet-identity-the-end-of-usernames-and-passwords-ff45e4861bf7)
 
