--- a/docs/wiki/3.面向Dapp用户的互联网计算机/3.1Dapp用户的互联网计算机介绍.md
+++ b/docs/wiki/3.面向Dapp用户的互联网计算机/3.1Dapp用户的互联网计算机介绍.md
@@ -1,8 +1,8 @@
 # 3.1 Dapp 用户的互联网计算机介绍
 
-作为终端用户，您与运行在互联网计算机上的去中心化应用程序（ Dapp ）进行交互。 这是可供用户使用的[互联网计算机上的 Dapp 索引](互联网计算机上的Dapp索引)。
+作为终端用户，您与运行在互联网计算机上的去中心化应用程序（ Dapp ）进行交互。 这是可供用户使用的[互联网计算机上的 Dapp 索引](3.2互联网计算机上的Dapp索引)。
 
-互联网计算机旨在改善在区块链上运行的智能合约和 Dapp 的用户体验。 IC 上的 Dapp 能够提供 Web 内容，允许您通过浏览器与 Dapp 进行交互。 Dapp 本身由 IC 上的[容器（dapps/智能合约）](https://wiki.internetcomputer.org/wiki/Canisters_(dapps/smart_contracts))运行，具有它提供的稳健性和安全性保证。
+互联网计算机旨在改善在区块链上运行的智能合约和 Dapp 的用户体验。 IC 上的 Dapp 能够提供 Web 内容，允许您通过浏览器与 Dapp 进行交互。 Dapp 本身由 IC 上的[容器（dapps/智能合约）](../5.1容器（dapps智能合约）.md)运行，具有它提供的稳健性和安全性保证。
 
 ## 与其他区块链相比
 与以太坊等其他智能合约区块链相比，互联网计算机为 Dapp 用户提供了以下直接好处：
@@ -18,10 +18,10 @@
 ### 快速的用户体验
 其他区块链上的传统智能合约速度慢，用户体验差。 这就是为什么许多非 IC Dapp 的大部分“Dapp”都不使用区块链技术的原因。 IC 的设计目标是开发人员可以构建面向消费者的体验，其速度与集中式服务器一样快。 IC 上的 Dapp 开发者无需在“智能合约”和“快速”之间做出选择。
 
-[互联网计算机的性能](互联网计算机的性能.md)测试显示查询调用（读取）的 IC 延迟为 200 毫秒，更新调用（写入）为 2 秒。 截至 2021 年 12 月 1 日，互联网计算机每秒可以处理 250,000 个查询和 11,000 个更新调用。
+[互联网计算机的性能](../6.为好奇者、研究人员和区块链爱好者准备的互联网计算机/6.1互联网计算机的性能.md)测试显示查询调用（读取）的 IC 延迟为 200 毫秒，更新调用（写入）为 2 秒。 截至 2021 年 12 月 1 日，互联网计算机每秒可以处理 250,000 个查询和 11,000 个更新调用。
 
 ### 互联网身份
-用户可以使用[互联网身份 Dapp](https://identity.ic0.app/) 登录 IC 上的大多数 dapp。[互联网身份](Dapp用户的互联网身份.md)是一个区块链身份验证系统，使您能够安全地、匿名地登录到互联网计算机上的 Dapp。 这使得 Dapp 用户更容易、更安全地登录 Dapp。 除了提供更安全的身份验证体验外，它还是 IC 的原生服务，因此需要身份验证系统的 Dapp 开发人员无需构建自己的身份验证系统。
+用户可以使用[互联网身份 Dapp](https://identity.ic0.app/) 登录 IC 上的大多数 dapp。[互联网身份](../2.互联网身份介绍/2.2Dapp用户的互联网身份.md)是一个区块链身份验证系统，使您能够安全地、匿名地登录到互联网计算机上的 Dapp。 这使得 Dapp 用户更容易、更安全地登录 Dapp。 除了提供更安全的身份验证体验外，它还是 IC 的原生服务，因此需要身份验证系统的 Dapp 开发人员无需构建自己的身份验证系统。
 
 ## 与传统平台相比
 ### 去中心化
@@ -30,6 +30,6 @@
 
 ## 另请参阅
 
-- [互联网计算机愿景](互联网计算机愿景.md)
-- [互联网计算机的性能](互联网计算机的性能.md)
+- [互联网计算机愿景](../1.互联网计算机介绍/1.3互联网计算机愿景.md)
+- [互联网计算机的性能](../6.为好奇者、研究人员和区块链爱好者准备的互联网计算机/6.1互联网计算机的性能.md)
 
