--- a/docs/wiki/2.互联网身份介绍/2.2Dapp用户的互联网身份.md
+++ b/docs/wiki/2.互联网身份介绍/2.2Dapp用户的互联网身份.md
@@ -78,7 +78,7 @@
 由于锚点的密钥材料是生成并存储在用户设备上的，因此特定服务或应用程序不会阻碍个人锚点作为身份验证方法的可用性。
 
 ## 快速链接
-- 有关更多技术概述，请查看 [互联网身份技术概述](互联网身份技术概述.md)页面。
+- 有关更多技术概述，请查看 [互联网身份技术概述](2.3互联网身份技术概述.md)页面。
 - [互联网身份媒体帖子](https://medium.com/dfinity/internet-identity-the-end-of-usernames-and-passwords-ff45e4861bf7)，概述了互联网身份以及如何开始。
 - [Web 身份验证媒体帖子](https://medium.com/dfinity/web-authentication-and-identity-on-the-internet-computer-a9bd5754c547) ，Björn Tackmann 概述了 Web 身份验证的核心思想，并描述了互联网身份是如何形成的。
 - [视频演示](https://www.youtube.com/watch?v=oxEr8UzGeBo)展示了互联网身份并展示了如何生成锚点。
