--- a/docs/wiki/3.面向Dapp用户的互联网计算机/3.3Dapp用户的互联网计算机.md
+++ b/docs/wiki/3.面向Dapp用户的互联网计算机/3.3Dapp用户的互联网计算机.md
@@ -5,13 +5,13 @@
 本文是面向广大受众的切入点。 目标受众是 Dapp 的用户，或者通常对 ehe IC 的高级图片感到好奇。 本文的目的是帮助人们在 IC 上使用面向用户或企业的 Dapp，而无需深入研究技术实现细节。
 
 ## IC简介
-- [Dapp 用户的互联网计算机介绍](Dapp用户的互联网计算机介绍.md)
+- [Dapp 用户的互联网计算机介绍](3.1Dapp用户的互联网计算机介绍.md)
 
 ## 如何找到 IC dapp
 
-- [互联网计算机上的 Dapp 索引](互联网计算机上的Dapp索引.md)
+- [互联网计算机上的 Dapp 索引](3.2互联网计算机上的Dapp索引.md)
 
 ## 如何使用互联网身份
 
-- [Dapp 用户的互联网身份](Dapp用户的互联网身份.md)
+- [Dapp 用户的互联网身份](../2.互联网身份介绍/2.2Dapp用户的互联网身份.md)
 
