--- a/docs/wiki/3.面向Dapp用户的互联网计算机/3.1Dapp用户的互联网计算机介绍.md
+++ b/docs/wiki/3.面向Dapp用户的互联网计算机/3.1Dapp用户的互联网计算机介绍.md
@@ -2,7 +2,7 @@
 
 作为终端用户，您与运行在互联网计算机上的去中心化应用程序（ Dapp ）进行交互。 这是可供用户使用的[互联网计算机上的 Dapp 索引](3.2互联网计算机上的Dapp索引)。
 
-互联网计算机旨在改善在区块链上运行的智能合约和 Dapp 的用户体验。 IC 上的 Dapp 能够提供 Web 内容，允许您通过浏览器与 Dapp 进行交互。 Dapp 本身由 IC 上的[容器（dapps/智能合约）](../5.1容器（dapps智能合约）.md)运行，具有它提供的稳健性和安全性保证。
+互联网计算机旨在改善在区块链上运行的智能合约和 Dapp 的用户体验。 IC 上的 Dapp 能够提供 Web 内容，允许您通过浏览器与 Dapp 进行交互。 Dapp 本身由 IC 上的[容器（dapps/智能合约）](../5.智能合约和Dapp开发人员的互联网计算机/5.1容器（dapps智能合约）.md)运行，具有它提供的稳健性和安全性保证。
 
 ## 与其他区块链相比
 与以太坊等其他智能合约区块链相比，互联网计算机为 Dapp 用户提供了以下直接好处：
