--- a/docs/wiki/7.常见问题解答、教程和操作方法/7.3投票和NNS奖励最大化.md
+++ b/docs/wiki/7.常见问题解答、教程和操作方法/7.3投票和NNS奖励最大化.md
@@ -1,8 +1,8 @@
 # 7.3 投票和 NNS 奖励最大化
-本文为希望最大限度地参与IC治理并获得NNS奖励的用户展示了常见的最佳实践。
+本文为参与IC治理、希望获得最大化NNS奖励的用户提供常见的最佳实践。
 
 ## 背景
-NNS是由互联网计算机社区控制的大脑。它是一个链上治理系统，在这里社区成员可以提交提案并投票。社区成员的投票权与ICP的数量成正比，他们质押了多长时间，质押了多长时间等......投了票的社区成员会得到ICP代币作为奖励（称为“NNS奖励”）。
+NNS是互联网计算机的以社区为主导的控制中枢。NNS是一个链上治理系统，在这里社区成员可以提交提案并投票。社区成员的投票权与ICP的数量成正比，取决于质押周期的长短，已质押时长等......参与投票的社区成员会得到ICP代币作为奖励（称为“NNS奖励”）。
 
 本文为希望在网络中最大限度地参与（以及质押）的社区成员提供了最佳实践。
 
