--- a/docs/wiki/1.互联网计算机介绍/1.1词汇表.md
+++ b/docs/wiki/1.互联网计算机介绍/1.1词汇表.md
@@ -30,7 +30,7 @@ actor是[Actor模型](https://en.wikipedia.org/wiki/Actor_model)中的原语。 
 
  **[账户]** 的**受益人**是拥有账户 **[余额]** 的 **[委托人]** 。 账户的受益人不能更改。 账户的受益人可能会/不会被允许在账户上进行 **[交易]** （见 **[受托人]** ）。
 
-### 区块链
+### 区块链 【blockchain】
 
 **区块链**是不断增长的加密链接块列表，由 **[共识]** 达成一致。 在 **[互联网计算机]** 上，每个 **[子网]** 都是一个区块链，这些区块链使用 **[链密钥加密]** 进行交互。
 
