--- a/docs/wiki/1.互联网计算机介绍/1.1词汇表.md
+++ b/docs/wiki/1.互联网计算机介绍/1.1词汇表.md
@@ -32,15 +32,15 @@ actor是[Actor模型](https://en.wikipedia.org/wiki/Actor_model)中的原语。 
 
 ### 区块链 【blockchain】
 
-**区块链**是不断增长的加密链接块列表，由 **[共识]** 达成一致。 在 **[互联网计算机]** 上，每个 **[子网]** 都是一个区块链，这些区块链使用 **[链密钥加密]** 进行交互。
+**区块链**是不断增长的加密链接块列表，由 **[共识]** 达成一致。 在 **[互联网计算机]** 上，每个 **[子网]** 都是一个区块链，这些区块链使用 **[链钥加密]** 进行交互。
 
 ### 边界节点【boundary nodes】
 
 **边界节点** Nginx 网关到互联网计算机。 这些节点充当 HTTP 路由器，通过它可以访问网络的 **[子网]** 区块链节点。 边界节点有几个目的：它们有助于可发现性（ic0.app 域名指向一组边界节点）；具有地理感知能力，并且可以将传入请求路由到最近的托管相关 **[容器]** 的子网 **[节点]** ；可以帮助负载平衡查询 **[交易]** ；可以在内容分发网络的角色中缓存经过加密验证的数据；可以限制来自外部 IP 地址的过度交互，引导/安装服务工作者【service worker】；可以帮助保护子网免受 DDoS 攻击。
 
-### 销毁交易【burning transaction】
+### 燃烧交易【burning transaction】
 
-**销毁交易**是“销毁”ICP的过程，从而销毁一定数量的 **[ICP]**。 主要用例是购买 **[cycles]**，通过该cycles销毁 ICP，同时使用 ICP 和 (**[SDR]**) 之间的当前交换率创建相应数量的cycles，交换率是一个 SDR 对应一万亿（10E12）cycles。 它表示为从源 **[账户]** 到 **[ICP 供应账户]** 的 **[交易]** 。
+**燃烧交易**是“燃烧”ICP的过程，从而销毁一定数量的 **[ICP]**。 主要用例是购买 **[cycles]**，通过该cycles销毁 ICP，同时使用 ICP 和 (**[SDR]**) 之间的当前交换率创建相应数量的cycles，交换率是一个 SDR 对应一万亿（10E12）cycles。 它表示为从源 **[账户]** 到 **[ICP 供应账户]** 的 **[交易]** 。
 
 ## C
 
@@ -80,9 +80,9 @@ actor是[Actor模型](https://en.wikipedia.org/wiki/Actor_model)中的原语。 
 
 在处理更新调用（或容器间调用）时， **[容器]** 可以存储在其 **[子网]** 的规范状态中的一段数据，以便在处理 **[查询]** 调用期间，容器可以向用户返回它确实致力于实现这一价值的证明。
 
-### 链密钥【chain key】
+### 链钥【chain key】
 
-**链密钥**加密【cryptography】由一组密码协议组成，这些协议协调组成 **[互联网计算机]** 的 **[节点]** 。 链密钥加密最明显的创新是互联网计算机只有一个公钥。 这是一个巨大的优势，因为它允许任何设备，包括智能手表和手机，来验证来自互联网计算机的艺术品【artifacts】的真实性。
+**链钥**加密【cryptography】由一组密码协议组成，这些协议协调组成 **[互联网计算机]** 的 **[节点]** 。 链密钥加密最明显的创新是互联网计算机只有一个公钥。 这是一个巨大的优势，因为它允许任何设备，包括智能手表和手机，来验证来自互联网计算机的艺术品【artifacts】的真实性。
 
 ### 共识【consensus】
 
