--- a/docs/wiki/1.互联网计算机介绍/1.2互联网计算机概述.md
+++ b/docs/wiki/1.互联网计算机介绍/1.2互联网计算机概述.md
@@ -4,7 +4,7 @@
 
 ## 什么是互联网计算机
 
-从概念上讲，互联网计算机是现有互联网的一个扩展，它使全球计算机网络能够为运行应用软件提供计算能力。
+从概念上讲，互联网计算机是现有互联网的一个扩展，它为全球计算机网络运行应用软件提供计算能力。
 
 就像传输控制协议(TCP)和互联网协议(IP)的采用提供了端点之间传输数据的规则来帮助建立了我们今天所知的互联网的“网络的网络”一样，互联网计算机依赖于一个被称为互联网计算机协议的去中心化分权协议来定义软件组件，使全球计算机网络能够整合它们的资源来读取、复制、修改和返回应用状态。
 
@@ -18,7 +18,7 @@
 
 对于终端用户来说，访问基于互联网计算机服务在很大程度上是透明的，与去中心化应用程序交互的体验和在公有云或私有云上的交互体验相同。
 
-然而，对于创建和管理这些基于互联网计算机的服务的人来说，互联网计算机消除了与开发和部署现代应用程序和微服务相关的许多成本、风险和复杂性。 此外，其安全协议可确保可靠的消息传递、透明的问责制和弹性，而无需依赖防火墙、备份设施、负载平衡服务或故障转移编排。
+然而，对于创建和管理这些基于互联网计算机的服务的人来说，互联网计算机消除了与开发和部署现代应用程序和微服务相关的许多成本、风险和复杂性。 此外，其安全协议可确保可靠的消息传递、透明的可解释性(accountability)和弹性(resilience)，而无需依赖防火墙、备份设施、负载平衡服务或故障转移编排。
 
 在某些方面，构建互联网计算机就是要让互联网恢复其开放、创新和创造性的根源。 为了专注于几个具体的例子，互联网计算机做了以下事情：
 
@@ -58,7 +58,7 @@
 
 ## 网络神经系统（NNS）
 
-互联网计算机由一个治理系统实时治理和管理，该治理系统集成到其区块链协议中，称为网络神经系统（或 NNS）。 任何人都可以向 NNS 提交提案，这些提案要么被拒绝，要么被采纳，然后自动执行。 提案可以添加额外的节点来运行互联网计算机、通过更新节点机器上运行的副本软件来升级互联网计算机协议、调整经济参数、执行一般配置以及许多其他事情。 这提供了优于传统区块链的优势，传统区块链必须由那些操作节点通过“硬分叉”手动升级。 分散的互联网计算机网络因此被设计为自我导向的。
+互联网计算机由一个治理系统实时治理和管理，该治理系统集成到其区块链协议中，称为网络神经系统（或 NNS）。 任何人都可以向 NNS 提交提案，这些提案要么被拒绝，要么被采纳，然后自动执行。 提案可以添加额外的节点来运行互联网计算机、通过更新节点机器上运行的副本软件来升级互联网计算机协议、调整经济参数、执行一般配置以及许多其他事情。 这提供了优于传统区块链的优势，传统区块链必须由那些操作节点通过“硬分叉”手动升级。 去中心化的互联网计算机网络因此被设计为自我导向的。
 
 ## 代币
 
@@ -66,13 +66,13 @@
 
 ## 内部构件
 
-在内部，互联网计算机的网络由各个子网区块链组成。新的子网区块链（通常简称为“子网”）是通过结合节点机器来增加其托管智能合约数据和计算的能力而形成的。其协议利用链密钥加密技术使子网作为单个区块链发挥作用，从而使它们对智能合约代码完全透明，并且区块链上的每个智能合约都可以直接调用任何其他智能合约。可以添加任意数量的子网，每个额外的子网都会线性增加网络的整体容量。
+在内部，互联网计算机的网络由各个子网区块链组成。新的子网区块链（通常简称为“子网”）是通过结合节点机器来增加其托管智能合约数据和计算的能力而形成的。其协议利用链钥加密技术使子网作为单个区块链发挥作用，从而使它们对智能合约代码完全透明，并且区块链上的每个智能合约都可以直接调用任何其他智能合约。可以添加任意数量的子网，每个额外的子网都会线性增加网络的整体容量。
 
 互联网计算机在专用于任务的特殊节点机器的主权网络上运行。它们由独立的节点提供商（节点所有者/运营商）、来自独立数据中心、位于全球不同地区和司法管辖区运行，无需任何企业云服务。新的子网是通过组合节点机器形成的，这些节点机器根据由节点提供者、数据中心、地理和管辖权组成的分散层次结构计算为独立的，这使得产生具有更高确定性和更低级别的所需安全性和弹性属性成为可能复制，从而提高效率。
 
 如需更深入地了解技术构建块，[极客互联网计算机白皮书]([The Internet Computer for Geeks whitepaper](https://dfinity.org/whitepaper.pdf))提供了全面的介绍。
 
-互联网计算机由 DFINITY 基金会开发，该基金会现在继续作为其主要贡献者。 该网络于 2021 年 5 月 10 日经历了创世纪（Genesis）。
+互联网计算机由 DFINITY 基金会开发，该基金会现在继续作为其主要贡献者。 该网络创世（Genesis）于 2021 年 5 月 10 日。
 
 ## 另请参阅
 
