--- a/docs/wiki/1.互联网计算机介绍/1.3互联网计算机愿景.md
+++ b/docs/wiki/1.互联网计算机介绍/1.3互联网计算机愿景.md
@@ -4,7 +4,7 @@
 
 ## 愿景和价值主张
 
-### 网速
+### 网络速度
 
 智能合约快速且高效，允许开发人员构建任何东西。 设计目标是开发人员可以构建面向消费者的体验，其速度与集中式服务器一样快。 Dapp 开发者不需要在“智能合约”和“快速”之间做出选择。 简而言之，Dapp 用户体验快到用户不会注意到他们的 Web 体验是在区块链上运行还是在集中式提供商上运行。
 
@@ -52,7 +52,7 @@ https://dashboard.internetcomputer.org/
 例如，Motoko Playground dapp 完全在链上托管和执行，它不需要访问者为计算付费：https://m7sm4-2iaaa-aaaab-qabra-cai.raw.ic0.app/
 
 #### 互联网身份
-互联网身份是一个区块链身份验证系统，使您能够安全地、匿名地登录到互联网计算机上的 Dapp。 这使得消费者可以轻松安全地登录 Dapp。
+互联网身份是一个区块链身份验证系统，使您能够安全地、匿名地登录到互联网计算机上的 Dapp。 这使得用户可以轻松安全地登录 Dapp。
 
 ### 网络神经系统
 网络神经系统 (NNS) 是组织、跟踪和管理互联网计算机的节点和子网的控制中心。 NNS 是一个自动化的协议内治理系统，使网络能够自我导向。 与比特币或以太坊不同，这意味着互联网计算机区块链可以通过社区主导的提案进行自我更新，从而让社区控制网络。
@@ -74,7 +74,7 @@ NNS的优势：
 - 与其他区块链集成，例如容器将来将能够拥有比特币地址。
 
 ### Dapp 的服务神经系统 (SNS) 经济框架
-互联网计算机的 SNS 功能将允许开发人员为其 dapps 创建分散的、基于代币的治理系统。
+互联网计算机的 SNS 功能将允许开发人员为其 dapps 创建去中心化的、基于代币的治理系统。
 
 这解锁了一些可能性：
 
