--- a/docs/wiki/3.面向Dapp用户的互联网计算机/3.1Dapp用户的互联网计算机介绍.md
+++ b/docs/wiki/3.面向Dapp用户的互联网计算机/3.1Dapp用户的互联网计算机介绍.md
@@ -8,12 +8,12 @@
 与以太坊等其他智能合约区块链相比，互联网计算机为 Dapp 用户提供了以下直接好处：
 
 ### 直接的网络体验
-互联网计算机上的智能合约安全地直接向用户提供 Web 内容。 这在区块链中是独一无二的，因为它们的典型 Dapp 有一小部分逻辑在智能合约中运行，但实际面向消费者的 Web 或界面托管在集中式云提供商（例如 AWS）上，而不是直接从区块链提供服务 。
+互联网计算机上的智能合约安全地直接向用户提供 Web 内容。 这在区块链中是独一无二的，因为它们的典型 Dapp 有一小部分逻辑在智能合约中运行，但实际面向消费者的 Web 或界面托管在集中式云提供商（例如 AWS）上，而不是直接从区块链提供服务。
 
 以用户体验为例，[DSCVR](https://h5aet-waaaa-aaaab-qaamq-cai.raw.ic0.app/post/5/introducing-dscvr-a-platform-that-belongs-to-its) 是一个去中心化的社交媒体平台。
 
 ### 用户无需为访问付费
-以太坊上的 Dapp 用户通常必须为使用智能合约付费。 除了高额费用外，这还意味着用户必须安装插件或其他软件（并通过代币支付）。 IC 的“容器付费模式”意味着 Dapp 开发人员可以为存储和计算付费，以创造无摩擦的用户体验。
+以太坊上的 Dapp 用户通常必须为使用智能合约付费。 除了高额费用外，这还意味着用户必须安装插件或其他软件（并通过代币支付）。 IC 的“容器付费模式”意味着 Dapp 开发人员可以为存储和计算付费，以创造无缝的用户体验。
 
 ### 快速的用户体验
 其他区块链上的传统智能合约速度慢，用户体验差。 这就是为什么许多非 IC Dapp 的大部分“Dapp”都不使用区块链技术的原因。 IC 的设计目标是开发人员可以构建面向消费者的体验，其速度与集中式服务器一样快。 IC 上的 Dapp 开发者无需在“智能合约”和“快速”之间做出选择。
