--- a/docs/wiki/3.面向Dapp用户的互联网计算机/3.2互联网计算机上的Dapp索引.md
+++ b/docs/wiki/3.面向Dapp用户的互联网计算机/3.2互联网计算机上的Dapp索引.md
@@ -1,4 +1,4 @@
-# 3.2 互联网计算生态系统上的 Dapp 索引
+# 3.2 互联网计算生态上的 Dapp 索引
 
 （重定向自[互联网计算机上的 dapps 索引](https://wiki.internetcomputer.org/w/index.php?title=Index_of_dapps_on_the_Internet_Computer&redirect=no)）
 
@@ -34,9 +34,9 @@
 
 此列表包括 [DFINITY 展示](https://dfinity.org/showcase/) 中的所有项目，但远不止于此。 它试图索引所有已知的 IC Dapp。 其中一些项目已获得 [DFINITY 基金会的开发者资助](https://dfinity.org/grants/)。 其中一些可能还没有部署在 IC 上——尽管人们期望他们正在朝着这个方向努力。 它不包括 IC 社区、媒体或开发团队本身（尽管它们将包含在“项目”部分中）。 所有信息均来自公共渠道。
 
-此列表中索引的项目涵盖了质量、成熟度和技术部署方面的广泛领域。 他们中的一些人已经从已建立的加密基金那里获得了风险投资； 其中一些正在充分利用互联网计算机（IC）的独特技术优势； 其中一些使用 IC 作为后端基础设施来代替 AWS/GCP，其中一些正在将现有的 Polkadot/Filecoin 应用程序移植到 IC。 一个项目的包含（或缺乏）并不代表它的质量。 该判断留给社区和所有 IC 倡导者。 这只是一个帮助大家在IC上寻宝的目录。
+此列表中索引的项目涵盖了质量、成熟度和技术部署方面的广泛领域。 他们中的一些人已经从已建立的加密基金那里获得了风险投资； 其中一些正在充分利用互联网计算机（IC）的独特技术优势； 其中一些使用 IC 作为后端基础设施来代替 AWS/GCP，其中一些正在将现有的 Polkadot/Filecoin 应用程序移植到 IC。 一个项目的包含（或缺乏）并不代表它的质量。 该判断留给社区和所有 IC 倡导者。 这只是一个帮助大家在IC上探索的目录。
 
-这只是一个索引/目录，并不代表任何形式的官方认可。 本网站的任何内容均不应被视为财务建议。 如果您需要使用下面列出的任何服务，请自行研究。
+这只是一个索引，并不代表任何形式的官方认可。 本网站的任何内容均不应被视为投资建议。 如果您需要使用下面列出的任何服务，请自行研究。
 
 ### 必备 (3)
 
@@ -790,7 +790,7 @@
 
 **ICMoji Origins**
 
-- What: ICMoji Origins 是一款在互联网计算机上链上构建的端到端的基于 NFT 的多人游戏。
+- What: ICMoji Origins 是一款在互联网计算机上构建的端到端的基于 NFT 的多人游戏。
 - Where:
   - https://icmojis.com/
   - https://graci-aaaaa-aaaah-aaqjq-cai.raw.ic0.app/
@@ -831,7 +831,7 @@
 
 **Texas Hold'em**
 
-- What: IC Texas Hold'em 是一个完全托管在互联网计算机上的 dapp。 DSCVR 黑客马拉松第 2 季第二名
+- What: IC Texas Hold'em 是一个完全托管在互联网计算机上的 dapp。 DSCVR 黑客松第 2 季第二名
 - Where: https://lm5fh-ayaaa-aaaah-aafua-cai.ic0.app/
 - Who: [NNSDao](https://twitter.com/NnsDaos)
 - Github: https://github.com/NnsDao/ICTexas-UI
@@ -1027,13 +1027,13 @@
 
 **Triip**
 
-- What: Triip 是一个支持区块链的旅行平台，允许服务提供商和客户之间进行直接交互。 使用专有令牌、Triip Miles 或 TIIM，Triip 是一个网络，可在旅行者和服务者之间实现更高的透明度、安全性和更低的交易成本。
+- What: Triip 是一个支持区块链的旅行平台，允许服务提供商和客户之间进行直接交互。 使用专有代币、Triip Miles 或 TIIM，Triip 是一个网络，可在旅行者和服务者之间实现更高的透明度、安全性和更低的交易成本。
 - Where: https://www.triip.me/
 - Twitter: https://twitter.com/triipme
 - Telegram: https://t.me/TriipMilesICO
 - Github: https://github.com/triipme
 - Who: [Triip Pte Ltd](https://www.triip.me/pages/about_us)
-- DFINITY 补助金：2021 年 8 月收到
+- DFINITY 赞助：于2021 年 8 月收到
 
 **WeAct.chat**
 
