--- a/docs/wiki/7.常见问题解答、教程和操作方法/7.5操作方法：为种子参与者申领神经元.md
+++ b/docs/wiki/7.常见问题解答、教程和操作方法/7.5操作方法：为种子参与者申领神经元.md
@@ -1,11 +1,11 @@
-# 7.5 操作方法：为种子参与者申领神经元
+# 7.5 操作方法：种子轮参与者如何申领神经元
 
-这是为种子贡献者以NNS神经元来申领ICP实用型货币的指南。关于认领后控制神经元的指南，请参考[此教程](https://medium.com/dfinity/integrating-ledger-nano-with-the-nns-front-end-dapp-user-manual-9c5600925e16)。
+这是为种子轮贡献者以NNS神经元来申领ICP实用型货币的指南。关于认领后控制神经元的指南，请参考[此教程](https://medium.com/dfinity/integrating-ledger-nano-with-the-nns-front-end-dapp-user-manual-9c5600925e16)。
 
 ## 介绍
-如果你在2017年2月向DFINITY基金会捐款来支持互联网计算机的发展，那么你就是种子参与者。当时每捐赠同价值的瑞士法郎会分配30个代币到你的密钥上。这些代币现在被称为“ICP实用型代币”或简称“ICP”。
+如果你在2017年2月向DFINITY基金会捐款来支持互联网计算机的发展，那么你就是种子参与者。当时每捐赠同价值的瑞士法郎会分配30个代币到你的密钥上。这些代币现在被称为“ICP功能型代币”或简称“ICP”。
 
-在创世解锁时(Genesis Unlock)，ICP以49个投票[神经元](ICP代币持有者、质押者和神经元持有者的互联网计算机/网络神经系统.md)为一篮子的形式支付给你。这些神经元已经存在于[网络神经系统](ICP代币持有者、质押者和神经元持有者的互联网计算机/网络神经系统.md)中。你的神经元包含了你已经获得的代币，这些代币被质押在内。
+在创世块解锁时(Genesis Unlock)，ICP以49个投票[神经元](ICP代币持有者、质押者和神经元持有者的互联网计算机/网络神经系统.md)为一篮子的形式支付给你。这些神经元已经存在于[网络神经系统](ICP代币持有者、质押者和神经元持有者的互联网计算机/网络神经系统.md)中。你的神经元包含了你已经获得的代币，这些代币被质押在内。
 
 你的神经元被配置成了自动投票，并且已经为你赢得了投票奖励。所以你不需要为了继续获得投票奖励而做任何事来初始化你的神经元。
 
@@ -13,10 +13,10 @@
 
 你的神经元也已经被提前设定了年龄。在创世解锁的那一刻，他们的年龄被设定为了18个月。这很重要，因为神经元年龄极大地增加了你的投票权和所获得的投票奖励。
 
-要控制神经元，你必须使用捐赠时生成的密钥。你当时用了12字的助记词来记录它。为了控制你的神经元，你需要首先申领你的神经元篮。有两种申领方式，将在下文进行说明：
+要控制神经元，你必须使用捐赠时生成的密钥。你当时用了12字的助记词来记录它。为了控制你的神经元，你需要首先申领神经元basket。有两种申领方式，将在下文进行说明：
 
 1. 使用Ledger Nano设备进行申领（即将推出）；
-2. 使用气隙计算机 + 联网计算机/智能手机进行申领。
+2. 使用断网计算机 + 联网计算机/智能手机进行申领。
 
 申领后会有两种方法来控制神经元：
 
@@ -27,20 +27,20 @@
 
 这将与Ledger Nano的下一个ICP应用程序更新一起推出。当前版本可以管理神经元，但还不能申领神经元。   
 
-第一阶段发布:Ledger Nano的“ICP”应用程序的第一阶段发布是针对所有消费者的。它允许人们管理神经元，比如改变溶解延迟、溶解、支付、管理热键、投票等。当然，它也允许在本地账本中转移液体ICP。
+第一阶段发布:Ledger Nano的“ICP”应用程序的第一阶段发布是针对所有消费者的。它允许人们管理神经元，比如改变溶解延迟、溶解、支付、管理热键、投票等。当然，它也允许在本地账本中转移ICP。
 
 第二阶段发布：接下来的第二阶段发布包括为种子轮神经元的 <kbd>claim_neurons</kbd> 功能。这是一个专门为种子轮参与者的更新。
 
-## 通过气隙计算机申领
+## 通过断网计算机申领
 
-申领需要获取你的秘密助记词以及由它延伸的密钥。强烈建议你使用气隙计算机进行申领。如果你不习惯这样的设置或以下任何步骤，那么你必须等待下一个版本的Ledger Nano设备的“ICP”应用程序。
+申领需要获取你的秘密助记词以及由它延伸的密钥。强烈建议你使用断网计算机进行申领。如果你不习惯这样的设置或以下任何步骤，那么你必须等待下一个版本的Ledger Nano设备的“ICP”应用程序。
 
 你可以使用Windows、Linux或MacOS来作为气隙计算机。Linux包括树莓派。
 
 ### 下载工具
 你需要第二台联网的计算机来下载工具。这些工具被称为 *keysmith* 和 *quill*。这里描述了如何为你的架构查找和下载二进制文件。或者，您可以从 github 上为 [keysmith](https://github.com/dfinity/keysmith)和 [quill](https://github.com/dfinity/quill) 提供的源代码来自己编译工具。
 
-二进制文件可用于以下硬件架构。在这里，架构是指气隙计算机，而不是联网计算机。
+二进制文件可用于以下硬件架构。在这里，架构是指断网计算机，而不是联网计算机。
 
 | 硬件 |	keysmith	| quill |
 | --- | --- | --- |
@@ -57,12 +57,12 @@
 ### 下载quill
 去 [quill](https://github.com/dfinity/quill/releases) 选择最新版本（必须 >= 0.2.12）,并获取与上表中气隙计算机架构匹配的可执行文件。
 
-### 拷贝到到气隙计算机
+### 拷贝到断网计算机
 从联网计算机中将 keysmith<kbd>.tar.gz</kbd>文件和 quill 可执行文件复制到气隙计算机。例如，你可以用一个USB驱动器执行这个操作。
 
 ### 验证哈希
 
-打开气隙机，转到终端。将目录更改为keysmith .tar.gz文件和quill可执行文件所在的文件夹。使用以下命令计算SHA256哈希：
+打开断网机，转到终端。将目录更改为keysmith .tar.gz文件和quill可执行文件所在的文件夹。使用以下命令计算SHA256哈希：
 
     openssl dgst -sha256 keysmith-*
 
@@ -101,7 +101,7 @@
 
 ## 使用keysmith生成私钥文件  
 ### 测试安装
-在气隙计算机上运行：   
+在断网计算机上运行：   
 
     keysmith  
 
@@ -184,7 +184,7 @@
 ## 用quill提交申领  
 
 ### 测试安装  
-在气隙计算机上运行：  
+在断网计算机上运行：  
 
     quill 
 
@@ -218,7 +218,7 @@
 如果您正在使用macOS，第一次运行<kbd>quill</kbd> 可能需要您通过 系统偏好设置> 安全和隐私> 通用 来授予权限。
 
 ### 签署申领请求  
-在气隙计算机上运行：  
+在断网计算机上运行：  
 
     quill --pem-file identity.pem claim-neurons >msg.json  
 
@@ -240,8 +240,8 @@
 * 在手机浏览器中打开扫描仪应用程序: https://p5deo-6aaaa-aaaab-aaaxq-cai.raw.ic0.app/ 
 * 扫描二维码并提交  
 
-### 清理气隙计算机  
-如果你的申领成功了，不要忘记删除气隙计算机中的<kbd>.pem</kbd>文件： 
+### 清理断网计算机  
+如果你的申领成功了，不要忘记删除断网计算机中的<kbd>.pem</kbd>文件： 
 
 
     rm identity.pem
