--- a/docs/wiki/7.常见问题解答、教程和操作方法/7.6操作方法：创建NNS提案.md
+++ b/docs/wiki/7.常见问题解答、教程和操作方法/7.6操作方法：创建NNS提案.md
@@ -1,6 +1,6 @@
-# 7.6 操作方法：创建NNS议案与提案  
+# 7.6 操作方法：创建NNS motion 提案  
 
-本文介绍了通过使用一些命令行工具和自托管神经元来提交 NNS议案与提案的方法。
+本文介绍了通过使用一些命令行工具和自托管神经元来提交 NNS motion 提案的方法。
 
 ## 1 背景
 为了准确理解正在发生的事情，有几点需要强调：
