--- a/docs/wiki/7.常见问题解答、教程和操作方法/7.7操作方法：设置你的神经元跟随另一个神经元.md
+++ b/docs/wiki/7.常见问题解答、教程和操作方法/7.7操作方法：设置你的神经元跟随另一个神经元.md
@@ -1,5 +1,5 @@
 # 7.7 操作方法：设置你的神经元跟随另一个神经元
-本文展示了如何通过使用NNS Frontend dapp来设置他们的神经元要跟随的神经元。
+本文展示了如何通过使用NNS Frontend dapp来设置跟随神经元。
 
 ## 1. 导航到 NEURONS 选项卡  
 导航到神经元选项卡并选择您希望设置跟随的神经元。  
@@ -12,7 +12,7 @@
 ![3](https://mywikis-wiki-media.s3.us-central-1.wasabisys.com/internetcomputer/thumb/3-follow.png/1200px-3-follow.png)
 
 ## 4. 选择要关注的话题   
-在这种情况下，我们选择“除治理之外的所有主题”。
+以下例子，我们选择“除治理之外的所有主题”。
 ![4](https://mywikis-wiki-media.s3.us-central-1.wasabisys.com/internetcomputer/thumb/4-follow.png/1200px-4-follow.png)
 
 ## 5. 选择“添加关注者” 
