--- a/docs/wiki/7.常见问题解答、教程和操作方法/7.8操作方法集合（how-tos).md
+++ b/docs/wiki/7.常见问题解答、教程和操作方法/7.8操作方法集合（how-tos).md
@@ -1,7 +1,7 @@
 # 7.8 操作方法集合 
 ## 质押、投票、治理 
 * [操作方法：为种子参与者申领神经元](操作方法：为种子参与者申领神经元.md)
-* [操作方法：创建NNS提案](操作方法：创建NNS提案.md)
+* [操作方法：创建NNS motion 提案](操作方法：创建NNS提案.md)
 * [操作方法：设置你的神经元跟随另一个神经元](操作方法：设置你的神经元跟随另一个神经元.md)
 * [操作方法：向神经元添加热键](操作方法：向神经元添加热键.md)
 
