--- a/docs/wiki/6.为好奇者、研究人员和区块链爱好者准备的互联网计算机/比特币集成.md
+++ b/docs/wiki/6.为好奇者、研究人员和区块链爱好者准备的互联网计算机/比特币集成.md
@@ -1,10 +1,10 @@
-# 比特币集成
+# 6.3 比特币集成
 ## 概述
 比特币是一种基于开源P2P协议的去中心化数字货币。比特币使用未花费交易输出（UTXO：unspent transaction output）会计模型，即交易创建输出，这个输出在其他交易中被当作输入，从而创建新的交易输出。一个交易消耗一个UTXO。
 
-比特币是一个不支持智能合约的支付网络。通过互联网计算机，智能合约对比特币的支持增加了巨大的价值：它充分利用了比特币网络和互联网计算机的综合优势，前者是世界数字黄金储备，而后者是可以安全、有效地执行智能合约平台。这个结合使去中心化金融（DeFi）应用程序成为可能，这种应用程序目前只能通过包装版比特币（wrapped Bitcoin）来实现，这种包装版比特币需要其他可信实体的介入。此外，比特币可用于支付互联网计算机上的任何服务，这开启了无穷无尽的应用场景。
+比特币是一个不支持智能合约的支付网络。通过互联网计算机，智能合约对比特币的支持增加了巨大的价值：它充分利用了比特币网络和互联网计算机的综合优势，前者是世界数字黄金储备，而后者是可以安全、有效地执行智能合约平台。这个结合使去中心化金融（DeFi）应用程序成为可能，这种应用程序目前只能通过包装比特币来实现，这种包装版比特币需要其他可信实体的介入。此外，比特币可用于支付互联网计算机上的任何服务，这开启了无穷无尽的应用场景。
 
-互联网计算机与比特币区块链集成，目标是通过两个区块链的直接的、“去信任的”集成，为比特币提供强大的智能合约功能。在这种情况下，“去信任”意味着除了信任比特币网络和互联网计算机的正确运行之外，不需要任何信任假设。换句话说，不能有额外的参与方（比如桥（bridges）或其他类型的中介），从而实现更遵守规则、更安全的集成。在比特币和互联网计算机的这种无需信任的结合中，容器可以在比特币区块链上直接持有比特币。
+互联网计算机与比特币区块链集成，目标是通过两个区块链的直接的、“去信任的”集成，为比特币提供强大的智能合约功能。在这种情况下，“去信任”意味着除了信任比特币网络和互联网计算机的正确运行之外，不需要任何信任假设。换句话说，不能有额外的参与方（比如桥接或其他类型的中介），从而实现更遵守规则、更安全的集成。在比特币和互联网计算机的这种无需信任的结合中，容器可以在比特币区块链上直接持有比特币。
 
 这种直接集成基于以下特性：
 
@@ -54,7 +54,7 @@
 * 比特币区块头的缓存，预计比特币组件下一个请求。
 * 已经发布但还没有传输到比特币节点的传出交易的缓存。
 
-最初，适配器只有硬编码的起源区块头，缓存是空的。
+最初，适配器只有硬编码的初始区块头，缓存是空的。
 
 #### 运行中的比特币适应器
 当比特币适配器启动时，它连接到比特币节点，并开始拉入区块头，直到完全同步。对于每个下载的区块头，比特币适配器执行以下检查: 
