--- a/docs/wiki/4.ICP代币持有者、质押者和神经元持有者的互联网计算机/4.2.1托管选项.md
+++ b/docs/wiki/4.ICP代币持有者、质押者和神经元持有者的互联网计算机/4.2.1托管选项.md
@@ -1,6 +1,6 @@
 # 4.2.1 托管选项
 ## 你想要最大限度地控制你的密钥吗?
-### 如果不想，那就使用第三方托管解决方案  
+### 如果不想，您可以使用第三方托管解决方案  
 第三方托管解决方案允许你与你的ICP交互，并为了控制而让出一些消费者体验。这个让步很简单:如果你不喜欢管理自己的密钥，并且愿意让第三方访问您的钥匙以使整个过程变得更方便，那么第三方解决方案可能是个好选择。  
 
 这里有一些例子  
@@ -9,7 +9,7 @@
 * [Sygnum](https://www.sygnum.com/)
 
 
-### 如果想，那就使用自助托管
+### 如果您想的话，那就使用自助托管
 * [用NNS fronted dapp托管ICP](https://wiki.internetcomputer.org/wiki/ICP_Custody_with_NNS_frontend_dapp)
 * [用Ledger Nano托管ICP](https://wiki.internetcomputer.org/wiki/ICP_custody_with_Ledger_Nano)
 * 用[Quill](https://github.com/dfinity/quill)托管ICP（冷钱包专用的极简账本和管理工具)网络计算机
@@ -17,7 +17,7 @@
 
 ## 自助托管:让控制最大化的选项
 
-如果你选择自助托管，让控制最大化的选项有:
+如果您选择自助托管，让控制最大化的选项有:
 * [用种子短语和不联网计算机托管ICP](https://wiki.internetcomputer.org/wiki/ICP_custody_with_seed_phrase_and_air-gapped_machine)
 * [用Ledger Nano托管ICP](https://wiki.internetcomputer.org/wiki/ICP_custody_with_Ledger_Nano)
 
@@ -29,4 +29,4 @@
 *   这种托管有内置的质押，如果你也想质押的话。
 
 ## 另请参阅
-* [管理持有的ICP](https://wiki.internetcomputer.org/wiki/Managing_ICP_holdings)
+* [管理持有的ICP](https://github.com/icpleague/icp-wiki/blob/master/docs/wiki/4.ICP%E4%BB%A3%E5%B8%81%E6%8C%81%E6%9C%89%E8%80%85%E3%80%81%E8%B4%A8%E6%8A%BC%E8%80%85%E5%92%8C%E7%A5%9E%E7%BB%8F%E5%85%83%E6%8C%81%E6%9C%89%E8%80%85%E7%9A%84%E4%BA%92%E8%81%94%E7%BD%91%E8%AE%A1%E7%AE%97%E6%9C%BA/4.2%E7%AE%A1%E7%90%86%E6%8C%81%E6%9C%89%E7%9A%84ICP.md)
