--- a/docs/wiki/4.ICP代币持有者、质押者和神经元持有者的互联网计算机/4.1ICP代币.md
+++ b/docs/wiki/4.ICP代币持有者、质押者和神经元持有者的互联网计算机/4.1ICP代币.md
@@ -4,7 +4,7 @@
 
 ## ICP代币和治理
 
-要参与互联网计算机的治理，必须将 ICP 代币质押。在 IC 上，质押被称为神经元，并允许参与由[网络神经系统](https://github.com/icpleague/icp-wiki/blob/master/docs/wiki/4.ICP%E4%BB%A3%E5%B8%81%E6%8C%81%E6%9C%89%E8%80%85%E3%80%81%E8%B4%A8%E6%8A%BC%E8%80%85%E5%92%8C%E7%A5%9E%E7%BB%8F%E5%85%83%E6%8C%81%E6%9C%89%E8%80%85%E7%9A%84%E4%BA%92%E8%81%94%E7%BD%91%E8%AE%A1%E7%AE%97%E6%9C%BA/4.6%E7%BD%91%E7%BB%9C%E7%A5%9E%E7%BB%8F%E7%B3%BB%E7%BB%9F.md)(NNS) 在 IC 上实施的算法治理系统。神经元所有者可以提交提案并对促进 IC 演变的提案进行投票。每隔一段时间，（目前是每 24 小时），进行投票并解决上一个提案的神经元获得与神经元的投票权成正比的奖励。该 wiki 还提供了有关[如何质押 ICP 代币](https://github.com/icpleague/icp-wiki/blob/master/docs/wiki/4.ICP%E4%BB%A3%E5%B8%81%E6%8C%81%E6%9C%89%E8%80%85%E3%80%81%E8%B4%A8%E6%8A%BC%E8%80%85%E5%92%8C%E7%A5%9E%E7%BB%8F%E5%85%83%E6%8C%81%E6%9C%89%E8%80%85%E7%9A%84%E4%BA%92%E8%81%94%E7%BD%91%E8%AE%A1%E7%AE%97%E6%9C%BA/4.2.2%E8%B4%A8%E6%8A%BC%E9%80%89%E9%A1%B9.md)以及[神经元如何参与治理的](https://github.com/icpleague/icp-wiki/blob/master/docs/wiki/4.ICP%E4%BB%A3%E5%B8%81%E6%8C%81%E6%9C%89%E8%80%85%E3%80%81%E8%B4%A8%E6%8A%BC%E8%80%85%E5%92%8C%E7%A5%9E%E7%BB%8F%E5%85%83%E6%8C%81%E6%9C%89%E8%80%85%E7%9A%84%E4%BA%92%E8%81%94%E7%BD%91%E8%AE%A1%E7%AE%97%E6%9C%BA/4.4%E4%BA%92%E8%81%94%E7%BD%91%E8%AE%A1%E7%AE%97%E6%9C%BA%E7%9A%84%E6%B2%BB%E7%90%86.md)等更多信息。
+要参与互联网计算机的治理，必须将 ICP 代币质押。在 IC 上，质押被称为神经元，并允许参与由[网络神经系统](网络神经系统.md)(NNS) 在 IC 上实施的算法治理系统。神经元所有者可以提交提案并对促进 IC 演变的提案进行投票。每隔一段时间，（目前是每 24 小时），进行投票并解决上一个提案的神经元获得与神经元的投票权成正比的奖励。该 wiki 还提供了有关[如何质押 ICP 代币](质押选项.md)以及[神经元如何参与治理的](互联网计算机的治理.md)等更多信息。
 
 ## ICP 代币和容器（dapps/智能合约）
 
@@ -21,7 +21,7 @@ ICP 代币用于支付拥有构成 IC 的计算节点的实体节点提供商。
 您可以通过多种方式获取 ICP 代币：
 
 - 通过列出可供交易的 ICP 代币的交易所直接购买 ICP 代币。Coinmarketcap 维护着一份相当完整的能交易 ICP代币的[交易所列表](https://coinmarketcap.com/currencies/internet-computer/markets/)
-- [参与](https://github.com/icpleague/icp-wiki/blob/master/docs/wiki/4.ICP%E4%BB%A3%E5%B8%81%E6%8C%81%E6%9C%89%E8%80%85%E3%80%81%E8%B4%A8%E6%8A%BC%E8%80%85%E5%92%8C%E7%A5%9E%E7%BB%8F%E5%85%83%E6%8C%81%E6%9C%89%E8%80%85%E7%9A%84%E4%BA%92%E8%81%94%E7%BD%91%E8%AE%A1%E7%AE%97%E6%9C%BA/4.4%E4%BA%92%E8%81%94%E7%BD%91%E8%AE%A1%E7%AE%97%E6%9C%BA%E7%9A%84%E6%B2%BB%E7%90%86.md)互联网计算机治理获得代币作为投票奖励
+- [参与](互联网计算机的治理.md)互联网计算机治理获得代币作为投票奖励
 - 从其他账户接收 ICP 代币
 - 通过互联网计算机协会 (ICA) 或 DFINITY 基金会获得[开发者代币赠款](https://dfinity.org/grants/)
 - 作为节点提供者提供计算能力而获得代币作为报酬
@@ -30,5 +30,5 @@ ICP 代币用于支付拥有构成 IC 的计算节点的实体节点提供商。
 
 在 IC 上，有关 ICP 代币的信息保存在 Ledger 容器中，该容器是网络神经系统的一个组件。Ledger 容器维护帐户标识符和 (ICP) 代币数量之间的映射。Ledger 提供了一个 API，允许控制帐户的委托人（例如用户或容器）将 ICP 代币转移到任何其他帐户。所有转账都被记录为交易分类容器中的交易。账本还记录了 ICP 代币的铸造和燃烧。
 
-对用户的 ICP 帐户和神经元的控制与唯一的主体相关联。委托人标识可用于涉及委托人账户和神经元的操作的授权机制。用户主体源自公共签名密钥的散列，并且为了授权用户在其上创建数字签名的交易。不用说，用户的私人签名密钥应该被安全地生成（例如，具有足够的熵），应该被安全地存储并且应该被备份。根据密钥控制的 ICP 代币（或神经元）的值，用户可以在密钥的安全性和使用密钥所需的摩擦级别之间做出权衡。可以在[此处](https://github.com/icpleague/icp-wiki/blob/master/docs/wiki/4.ICP%E4%BB%A3%E5%B8%81%E6%8C%81%E6%9C%89%E8%80%85%E3%80%81%E8%B4%A8%E6%8A%BC%E8%80%85%E5%92%8C%E7%A5%9E%E7%BB%8F%E5%85%83%E6%8C%81%E6%9C%89%E8%80%85%E7%9A%84%E4%BA%92%E8%81%94%E7%BD%91%E8%AE%A1%E7%AE%97%E6%9C%BA/4.2%E7%AE%A1%E7%90%86%E6%8C%81%E6%9C%89%E7%9A%84ICP.md)找到管理 ICP 持有量的用户指南。
+对用户的 ICP 帐户和神经元的控制与唯一的主体相关联。委托人标识可用于涉及委托人账户和神经元的操作的授权机制。用户主体源自公共签名密钥的散列，并且为了授权用户在其上创建数字签名的交易。不用说，用户的私人签名密钥应该被安全地生成（例如，具有足够的熵），应该被安全地存储并且应该被备份。根据密钥控制的 ICP 代币（或神经元）的值，用户可以在密钥的安全性和使用密钥所需的摩擦级别之间做出权衡。可以在[此处](管理持有的ICP.md)找到管理 ICP 持有量的用户指南。
 
