--- a/docs/wiki/4.ICP代币持有者、质押者和神经元持有者的互联网计算机/4.2.1托管选项.md
+++ b/docs/wiki/4.ICP代币持有者、质押者和神经元持有者的互联网计算机/4.2.1托管选项.md
@@ -24,9 +24,9 @@
 ### 特征
 *   这需要更多的技术知识；
 *   用户对ICP拥有最大的控制权；
-*   从软件的角度来看，这是最安全的选择，因为用户依赖的软件表面更少，但从人的角度来看，这是最危险的，因为用户要自己承担种子短语和私钥保管的风险；
+*   从软件的角度来看，这是最安全的选择，因为用户依赖的软件更少，但从人的角度来看，这是最危险的，因为用户要自己承担种子短语和私钥保管的风险；
 *   对想要更多地控制自己的ICP的人而言非常理想；
-*   这种托管有内置的质押，如果你也想质押的话。
+*   这种托管有内置的质押。
 
 ## 另请参阅
-* [管理持有的ICP](https://github.com/icpleague/icp-wiki/blob/master/docs/wiki/4.ICP%E4%BB%A3%E5%B8%81%E6%8C%81%E6%9C%89%E8%80%85%E3%80%81%E8%B4%A8%E6%8A%BC%E8%80%85%E5%92%8C%E7%A5%9E%E7%BB%8F%E5%85%83%E6%8C%81%E6%9C%89%E8%80%85%E7%9A%84%E4%BA%92%E8%81%94%E7%BD%91%E8%AE%A1%E7%AE%97%E6%9C%BA/4.2%E7%AE%A1%E7%90%86%E6%8C%81%E6%9C%89%E7%9A%84ICP.md)
+* [管理持有的ICP](管理持有的ICP.md)
