--- a/docs/wiki/4.ICP代币持有者、质押者和神经元持有者的互联网计算机/4.2.2质押选项.md
+++ b/docs/wiki/4.ICP代币持有者、质押者和神经元持有者的互联网计算机/4.2.2质押选项.md
@@ -15,7 +15,7 @@
 如果您使用封闭隔离设备进行托管，请参阅：[用种子短语和永不联网电脑进行ICP质押](https://wiki.internetcomputer.org/wiki/ICP_staking_with_seed_phrase_and_air-gapped_computer)
 
 ## 另请参阅
-* [管理持有的ICP](https://wiki.internetcomputer.org/wiki/Managing_ICP_holdings) 
-* [ICP托管选项](https://wiki.internetcomputer.org/wiki/ICP_custody_options) 
-* [使用种子短语和不联网计算机进行ICP托管](https://wiki.internetcomputer.org/wiki/ICP_custody_with_seed_phrase_and_air-gapped_machine) 
-* [使用NNS frontend dapp进行 ICP质押](https://wiki.internetcomputer.org/wiki/ICP_staking_with_NNS_frontend_dapp) 
+* [管理持有的ICP](管理持有的ICP.md) 
+* [ICP托管选项](ICP托管选项.md) 
+* [使用种子短语和不联网计算机进行ICP托管](使用种子短语和不联网计算机进行ICP托管.md) 
+* [使用NNS frontend dapp进行 ICP质押](使用NNS frontend dapp进行 ICP质押.md) 
